--- a/src/pages/journal/2023-12-05.mdx
+++ b/src/pages/journal/2023-12-05.mdx
@@ -45,7 +45,7 @@ Installing vite-plugin-pwa explicitly helps with Typescript files, but not with 
 
 After configuration, when running `pnpm build`, I get an error. It seems `workbox-window` is required as explicit dependency.
 
-```log
+```bash
 11:58:15 [ERROR] [vite] [vite-plugin-pwa:build] [vite]: Rollup failed to resolve import "workbox-window" from "/@vite-plugin-pwa/virtual:pwa-register".
 This is most likely unintended because it can break your application at runtime.
 If you do want to externalize this module explicitly add it to
