--- a/src/pages/recipe.mdx
+++ b/src/pages/recipe.mdx
@@ -21,7 +21,7 @@ A PWA is just any web app that provides a webmanifest and a service worker (for 
 Install the Vite-PWA Astro integration as development dependency
 
 ```bash
-pnpm add -D @vite-pwa/astro
+pnpm add -D @vite-pwa/astro workbox-window
 ```
 
 ### Generate assets (optional)
@@ -33,7 +33,7 @@ Vite-PWA provides an asset generator, that takes your favicon.svg and generates 
 Install the asset generator
 
 ```bash
-pnpm add -D @vite-pwa/assets-generator workbox-window
+pnpm add -D @vite-pwa/assets-generator
 ```
 
 Add the following to the `scripts` of `package.json`
