--- a/src/pages/journal/2023-12-06.mdx
+++ b/src/pages/journal/2023-12-06.mdx
@@ -7,3 +7,9 @@ summary: Simplified App
 ### Simplified the App [10:00]
 
 I created a fresh, slightly simpler app using the official Astro 4 release. I removed RSS and content collections and started of the basic starter template (instead of the blog template).
+
+### Offline Support
+
+With Erika's hint I got the virtual modules working (restart the IDE!), but until now, it worked only with production mode and no offline support. Now, should I start with offline configuration without development mode, or will development help me figure it out?
+
+I have installed the node standalone adapter (in addition to the vercel adapter, to try out PWA in preview mode), so I have some possibility to try out the PWA locally.
