Added offline-first implementation
Switched from generateSW to injectManifest

--- a/src/content/recipes/cpr5nc2adtfh.mdx
+++ b/src/content/recipes/cpr5nc2adtfh.mdx
@@ -1,14 +1,13 @@
 ---
-layout: ../layouts/Layout.astro
-title: Recipe
-description: Make your Astro project an installable PWA with offline-support
+title: Basic PWA with `generateSW`
+description: The simplest way to make your Astro project an installable PWA with offline-support
 type: recipe
 stub: true
 service: Vite-PWA
 i18nReady: false
 ---
 
-# Recipe
+# Basic PWA with `generateSW`
 
 A PWA is just any web app that provides a webmanifest and a service worker (for offline support).
 
