--- a/src/pages/journal/2023-12-07.mdx
+++ b/src/pages/journal/2023-12-07.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/JournalLayout.astro
 date: 2023-12-07
-summary: Simplified App
+summary: Switch for node-based preview
 ---
 
 ### Added local preview based on node adapter [14:30]
