Restructured the app a bit

--- a/src/pages/journal/2023-12-12.mdx
+++ b/src/pages/journal/2023-12-12.mdx
@@ -17,9 +17,9 @@ I created some routes based on the idea of a recipe app to demonstrate different
 ```plaintext
     Route                  ║ Output                 ║ PC ║ PW
 ═══════════════════════════╬════════════════════════╬════╬═════
-├── catalog                ║                        ║    ║
+├── cookbook                ║                        ║    ║
 │   ├── index.astro        ║ SSR                    ║    ║
-│   └── offline.astro      ║ /catalog/offline.html  ║ x  ║
+│   └── offline.astro      ║ /cookbook/offline.html  ║ x  ║
 ├── category               ║                        ║    ║
 │   ├── [slug].astro       ║ e.g. /category/french  ║    ║
 │   └── offline.astro      ║ /category/offline.html ║ x  ║
