--- a/src/content/recipes/generate-sw.mdx
+++ b/src/content/recipes/generate-sw.mdx
@@ -1,10 +1,7 @@
 ---
 title: Basic PWA with `generateSW`
-description: The simplest way to make your Astro project an installable PWA with offline-support
-type: recipe
-stub: true
-service: Vite-PWA
-i18nReady: false
+description: The simplest way to make your Astro project an installable PWA with offline-support.
+categories: [Setup]
 ---
 
 # Basic PWA with `generateSW`
