WIP: Download button

--- a/src/content/recipes/inject-manifest.mdx
+++ b/src/content/recipes/inject-manifest.mdx
@@ -1,7 +1,7 @@
 ---
 title: PWA with `injectManifest`
 description: Create a simple PWA and provide your own service worker to gain more control over the behavior.
-categories: [Setup]
+categories: [Setup, Caching]
 ---
 
 # PWA with `injectManifest`
